# back

./: Cargo.toml  README.md  docker
migrations/2022-04-28-095715_add_task_table/: up.sql
migrations/2022-04-30-014939_create_user/: up.sql
migrations/2022-05-01-032426_add_fk_task_column/: down.sql  up.sql
migrations/2022-05-01-032509_add_fk/: down.sql  up.sql
migrations/2022-05-28-063001_add_timestamps_to_tasks/: down.sql  up.sql
migrations/2022-05-28-064603_add_timestamps_users/: down.sql  up.sql
migrations/2022-05-28-092546_add_default_none_user/: down.sql  up.sql
src/: database.rs  main.rs  router.rs  schema.rs
src/controllers/: mod.rs  tasks.rs  users.rs
src/models/: mod.rs
