[package]
name = "back"
version = "0.2.0"
edition = "2021"
description = "Бэкенд для проекта менеджмента задач."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
chrono = {version = "0.4.0", features = ["serde"]}
diesel = {version="1.4.8", features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.15"
env_logger = "0.9.0"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "0.8", features = ["serde","v4"]}
